force-app/main/default/objects/PKB__c/PKB__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>settings container for the Public Knowledge Base</description>
    <label>PKB</label>
</CustomObject>