force-app/main/default/objects/PKB__c/fields/Category_Group_2__c.field-meta.xml
<CustomField>
    <fullName>Category_Group_2__c</fullName>
    <description>Group name that should be displayed under the &quot;Narrow Search&quot; section of the PKB home page. The field named Root Category 2 must have a value that is a category in this group.</description>
    <inlineHelpText>Group name that should be displayed under the &quot;Narrow Search&quot; section of the PKB home page. The field named Root Category 2 must have a value that is a category in this group.</inlineHelpText>
    <label>Category Group 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>