force-app/main/default/objects/PKB__c/fields/MRoot_Category_3__c.field-meta.xml
<CustomField>
    <fullName>MRoot_Category_3__c</fullName>
    <description>Root Category name that will be used as the root category in the category group&apos;s displayed in filters menu of the PKB mobile page. The value for this field must be a category of the group named in the Category Group 3 field.</description>
    <inlineHelpText>Root Category name that will be used as the root category in the category group&apos;s displayed in filters menu of the PKB mobile page. The value for this field must be a category of the group named in the Category Group 3 field.</inlineHelpText>
    <label>Root Category 3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>